Fixes spacing of at mention items in livefyre comments.

--- a/themes/greatermedia/assets/css/greater_media.css
+++ b/themes/greatermedia/assets/css/greater_media.css
@@ -12525,6 +12525,9 @@ category: Components - Article
 .fyre-hovercard .fyre-hovercard-body .fyre-hovercard-button {
   display: none !important; }
 
+.fyre-mention-menu .fyre-mention-item {
+  height: 2.5em; }
+
 /*
 	.fyre-mention-item {
 		height: 2.5em;
