--- a/themes/greatermedia/assets/css/sass/components/_livefyre-comments.scss
+++ b/themes/greatermedia/assets/css/sass/components/_livefyre-comments.scss
@@ -1269,6 +1269,10 @@ category: Components - Article
 	display: none !important;
 }
 
+.fyre-mention-menu .fyre-mention-item {
+	height: 2.5em;
+}
+
 	/*
 	.fyre-mention-item {
 		height: 2.5em;
